Removed unused utility classes

--- a/dropdown.html
+++ b/dropdown.html
@@ -6,7 +6,7 @@
             <span x-text="selectedValue">
 
             </span>
-            <span class="block transition duration-300 ease-linear transform-gpu"
+            <span class="block transition duration-300 ease-linear"
                 :class="isOpen === true ? 'rotate-180' : 'rotate-0'">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="w-5 h-5">
